<resources>
    <string name="app_name">FirstWeather</string>
    <string name="enter_address">输入地址</string>
    <string name="forecast">预报</string>
    <string name="life_indices">生活指数</string>
    <string name="cold">感冒</string>
    <string name="dress">穿衣</string>
    <string name="ultraviolet">紫外线</string>
    <string name="car_washing">洗车</string>
    <string name="weather">天气</string>
</resources>