<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp">

        <View
            android:id="@+id/baseline"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/indicesTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/life_indices"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/coldImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_coldrisk"
            android:contentDescription="@string/cold"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/indicesTV"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/coldTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cold"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/coldImg"
            app:layout_constraintStart_toEndOf="@id/coldImg"/>
        <TextView
            android:id="@+id/coldIndexTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/coldTV"
            app:layout_constraintStart_toStartOf="@id/coldTV"
            app:layout_constraintBottom_toBottomOf="@id/coldImg"
            />

        <ImageView
            android:id="@+id/dressImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dress"
            android:src="@drawable/ic_dressing"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/indicesTV"
            app:layout_constraintStart_toEndOf="@id/baseline"
            />
        <TextView
            android:id="@+id/dressTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dress"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/dressImg"
            app:layout_constraintStart_toEndOf="@id/dressImg"/>
        <TextView
            android:id="@+id/dressIndexTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/dressTV"
            app:layout_constraintStart_toStartOf="@id/dressTV"
            app:layout_constraintBottom_toBottomOf="@id/dressImg"
            />

        <ImageView
            android:id="@+id/ultravioletImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ultraviolet"
            android:layout_margin="10dp"
            android:src="@drawable/ic_ultraviolet"
            app:layout_constraintTop_toBottomOf="@id/coldIndexTv"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:id="@+id/ultravioletTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ultraviolet"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/ultravioletImg"
            app:layout_constraintStart_toEndOf="@id/ultravioletImg"/>
        <TextView
            android:id="@+id/ultravioletIndexTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/ultravioletTV"
            app:layout_constraintStart_toStartOf="@id/ultravioletTV"
            app:layout_constraintBottom_toBottomOf="@id/ultravioletImg"
            />

        <ImageView
            android:id="@+id/carImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_carwashing"
            android:contentDescription="@string/car_washing"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/dressIndexTv"
            app:layout_constraintStart_toEndOf="@id/baseline"
            />
        <TextView
            android:id="@+id/carTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_washing"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toTopOf="@id/carImg"
            app:layout_constraintStart_toEndOf="@id/carImg"/>
        <TextView
            android:id="@+id/carIndexTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/carTV"
            app:layout_constraintStart_toStartOf="@id/carTV"
            app:layout_constraintBottom_toBottomOf="@id/carImg"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>